--- a/snackager/skaffold.yaml
+++ b/snackager/skaffold.yaml
@@ -10,6 +10,7 @@ build:
           - src: src/**/*.js
             dest: /app
       docker:
+        dockerfile: snackager/Dockerfile
         buildArgs:
           node_version: 12.18.4
   tagPolicy:
